[package]
name = "nettools-tauri"
version = "1.0.0"
description = "NetTools Professional Suite - Network Utilities for Windows"
authors = ["frekms"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "notification-all", "os-all", "clipboard-all", "dialog-all", "path-all", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-create-dir", "fs-remove-file", "fs-rename-file", "window-close", "window-hide", "window-show", "window-maximize", "window-minimize", "window-unmaximize", "window-unminimize", "window-start-dragging", "window-set-title", "window-set-size", "window-set-min-size", "window-set-max-size", "window-set-position", "window-set-fullscreen", "window-set-focus", "window-set-always-on-top", "process-exit", "process-relaunch", "shell-execute", "shell-open", "shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
trust-dns-resolver = "0.23"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
x509-parser = "0.15"
native-tls = "0.2"
whois-rust = "1.5"
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
ipnetwork = "0.20"
regex = "1.10"
thiserror = "1.0"
anyhow = "1.0"
hostname = "0.3"
whoami = "1.4"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
