[package]
name = "nettools-tauri"
version = "1.0.0"
description = "NetTools Professional Suite - Network Utilities for Windows"
authors = ["frekms"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "nettools_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
ipnetwork = "0.20"
regex = "1"
thiserror = "1.0"
anyhow = "1.0"
hostname = "0.4"
whoami = "1.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
